--- a/[CP] BigTreeBuildings/[CP] BigTreeBuildings.csproj
+++ b/[CP] BigTreeBuildings/[CP] BigTreeBuildings.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-	  <OutputType>None</OutputType>
+	  <OutputType>Content</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
