--- a/Content Patcher Mods/[CP] PlantFruitTreesAnywhere/manifest.json
+++ b/Content Patcher Mods/[CP] PlantFruitTreesAnywhere/manifest.json
@@ -1,11 +1,21 @@
 {
-   "Name": "Plant Fruit Trees Anywhere",
-   "Author": "juminos",
-   "Version": "1.0.0",
-   "Description": "Plant fruit trees in any location.",
-   "UniqueID": "juminos.PlantFruitTreesAnywhere",
-   "UpdateKeys": [],
-   "ContentPackFor": {
-      "UniqueID": "Pathoschild.ContentPatcher"
-  }
+  "Name": "Plant Fruit Trees Anywhere",
+  "Author": "juminos",
+  "Version": "1.0.0",
+  "Description": "Plant fruit trees in any location.",
+  "UniqueID": "juminos.PlantFruitTreesAnywhere",
+  "UpdateKeys": [],
+  "ContentPackFor": {
+    "UniqueID": "Pathoschild.ContentPatcher"
+  },
+  "Dependencies": [
+    {
+      "UniqueID": "juminos.MoreFruitTrees",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "juminos.MoreWildTrees",
+      "IsRequired": false
+    }
+  ]
 }
