improved ring functions

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,22 @@ node_modules/
 /BetterFruitTrees/obj/Debug/net6.0/BetterFruitTrees.AssemblyInfoInputs.cache
 /BetterFruitTrees/obj/Debug/net6.0/BetterFruitTrees.assets.cache
 /BetterFruitTrees/obj/Debug/net6.0/BetterFruitTrees.csproj.AssemblyReference.cache
+/DeepSea/obj/Debug/net6.0/DeepSea.AssemblyInfo.cs
+/DeepSea/obj/Debug/net6.0/DeepSea.AssemblyInfoInputs.cache
+/DeepSea/obj/Debug/net6.0/DeepSea.assets.cache
+/DeepSea/obj/Debug/net6.0/DeepSea.csproj.AssemblyReference.cache
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.AssemblyInfo.cs
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.AssemblyInfoInputs.cache
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.csproj.AssemblyReference.cache
+/HorseReskin/obj/Debug/net6.0/HorseReskin.AssemblyInfo.cs
+/HorseReskin/obj/Debug/net6.0/HorseReskin.AssemblyInfoInputs.cache
+/HorseReskin/obj/Debug/net6.0/HorseReskin.assets.cache
+/HorseReskin/obj/Debug/net6.0/HorseReskin.csproj.AssemblyReference.cache
+/WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.AssemblyInfo.cs
+/WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.AssemblyInfoInputs.cache
+/WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.assets.cache
+/WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.csproj.AssemblyReference.cache
+/FrenshipRings/bin/Debug/net6.0/FrenshipRings 1.0.0.zip
+/FrenshipRings/bin/Debug/net6.0/FrenshipRings.dll
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.dll
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.sourcelink.json
