--- a/Content Patcher Mods/[CP] MoreFarmAnimals/manifest.json
+++ b/Content Patcher Mods/[CP] MoreFarmAnimals/manifest.json
@@ -1,11 +1,21 @@
 {
-    "Name": "More Farm Animals",
-    "Author": "juminos",
-    "Version": "1.0.0",
-    "Description": "Adds more farm animals.",
-    "UniqueID": "juminos.MoreFarmAnimals",
-    "UpdateKeys": [], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
-    "ContentPackFor": {
-        "UniqueID": "Pathoschild.ContentPatcher"
+  "Name": "More Farm Animals",
+  "Author": "juminos",
+  "Version": "1.0.0",
+  "Description": "Adds more farm animals.",
+  "UniqueID": "juminos.MoreFarmAnimals",
+  "UpdateKeys": [], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
+  "ContentPackFor": {
+    "UniqueID": "Pathoschild.ContentPatcher"
+  },
+  "Dependencies": [
+    {
+      "UniqueID": "6480.blueegg",
+      "IsRequired": false
+    },
+    {
+      "UniqueID": "Angelltear.BFAV.voidduck1.6",
+      "IsRequired": false
     }
+  ]
 }
