Dino dependencies reworked

--- a/DinoForm2/manifest.json
+++ b/DinoForm2/manifest.json
@@ -8,7 +8,7 @@
   "MinimumApiVersion": "4.0.0",
   "Dependencies": [
     {
-      "UniqueID": "juminos.CPDinoForm2",
+      "UniqueID": "juminos.DinoForm2.CP",
       "IsRequired": true
     }
   ],
