--- a/BugNet2/manifest.json
+++ b/BugNet2/manifest.json
@@ -3,12 +3,12 @@
   "Version": "1.0.0",
   "MinimumApiVersion": "4.0.0",
   "Description": "Catch bugs and stuff.",
-  "UniqueID": "juminos.BugNet2",
-  "EntryDll": "BugNet2.dll",
+  "UniqueID": "spacechase0.BugNet",
+  "EntryDll": "BugNet.dll",
   "UpdateKeys": [],
   "Dependencies": [
     {
-      "UniqueID": "juminos.CPBugNet2",
+      "UniqueID": "juminos.BugNet2.CP",
       "IsRequired": true
     }
   ]
