--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ node_modules/
 /FrenshipRings/bin/Debug/net6.0/FrenshipRings.dll
 /FrenshipRings/obj/Debug/net6.0/FrenshipRings.dll
 /FrenshipRings/obj/Debug/net6.0/FrenshipRings.sourcelink.json
+/FrenshipRings/obj/Debug/net6.0/FrenshipRings.assets.cache
