--- a/DinoForm2/[CP] DinoForm2/manifest.json
+++ b/DinoForm2/[CP] DinoForm2/manifest.json
@@ -2,9 +2,9 @@
   "Name": "[CP] Dino Form 2",
   "Author": "juminos",
   "Version": "1.0.0",
-  "Description": "Harness the power of Pepper Rex!",
+  "Description": "Adds Pepper Rex as a barn animal.",
   "UniqueID": "juminos.DinoForm2.CP",
-  "UpdateKeys": [], // when you release the mod, see https://stardewvalleywiki.com/Modding:Modder_Guide/APIs/Update_checks
+  "UpdateKeys": [],
   "ContentPackFor": {
     "UniqueID": "Pathoschild.ContentPatcher"
   },
