--- a/BetterFruitTrees/manifest.json
+++ b/BetterFruitTrees/manifest.json
@@ -13,6 +13,10 @@
       "IsRequired": false
     },
     {
+      "UniqueID": "juminos.BigTreeBuildings",
+      "IsRequired": false
+    },
+    {
       "UniqueID": "Cornucopia.MoreCrops",
       "IsRequired": false
     },
