--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ node_modules/
 /FrenshipRings/obj/Debug/net6.0/FrenshipRings.dll
 /FrenshipRings/obj/Debug/net6.0/FrenshipRings.sourcelink.json
 /FrenshipRings/obj/Debug/net6.0/FrenshipRings.assets.cache
+/ContentPatcherMods
