--- a/FrenshipRings/FrenshipRings.csproj
+++ b/FrenshipRings/FrenshipRings.csproj
@@ -22,8 +22,9 @@
 	
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
-    <PackageReference Include="FastExpressionCompiler.LightExpression" Version="5.0.0" />
+    <PackageReference Include="FastExpressionCompiler.LightExpression" Version="5.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+    <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta11" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
     <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
   </ItemGroup>
