--- a/FrenshipRings/manifest.json
+++ b/FrenshipRings/manifest.json
@@ -2,7 +2,7 @@
     "Name": "Frenship Rings",
     "Author": "juminos",
     "Version": "1.0.0",
-    "Description": "Adds rings to befriend others.",
+    "Description": "New rings to befriend creatures.",
     "UniqueID": "juminos.FrenshipRings",
     "EntryDll": "FrenshipRings.dll",
     "MinimumApiVersion": "3.0.0",
