--- a/FrenshipRings/manifest.json
+++ b/FrenshipRings/manifest.json
@@ -1,12 +1,12 @@
 {
     "Name": "Frenship Rings",
     "Author": "juminos",
-    "Version": "1.0.0",
+    "Version": "1.0.1",
     "Description": "New rings to befriend creatures.",
     "UniqueID": "juminos.FrenshipRings",
     "EntryDll": "FrenshipRings.dll",
-    "MinimumApiVersion": "3.0.0",
-    "UpdateKeys": [],
+    "MinimumApiVersion": "4.0.0",
+    "UpdateKeys": [ "Nexus:30480" ],
     "Dependencies": [
         {
             "UniqueID": "juminos.FrenshipRings.CP",
