--- a/FrenshipRings/FrenshipRings.csproj
+++ b/FrenshipRings/FrenshipRings.csproj
@@ -22,7 +22,8 @@
 	
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
-    <PackageReference Include="FastExpressionCompiler.LightExpression" Version="5.0.1" />
+	  <PackageReference Include="Lib.Harmony" Version="2.3.3" />
+	  <PackageReference Include="FastExpressionCompiler.LightExpression" Version="5.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta11" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
