--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ ContentPatcherMods/
 /WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.csproj.CoreCompileInputs.cache
 /WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.dll
 /WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.sourcelink.json
+/BetterFruitTrees/obj/project.assets.json
+/DeepSea/obj/DeepSea.csproj.nuget.g.props
+/DeepSea/obj/project.assets.json
+/DeepSea/obj/DeepSea.csproj.nuget.dgspec.json
+/DeepSea/obj/Debug/net6.0/DeepSea.GeneratedMSBuildEditorConfig.editorconfig
+/HorseReskin/obj/Debug/net6.0/HorseReskin.GeneratedMSBuildEditorConfig.editorconfig
+/HorseReskin/obj/HorseReskin.csproj.nuget.g.props
+/HorseReskin/obj/HorseReskin.csproj.nuget.dgspec.json
+/HorseReskin/obj/project.assets.json
+/WalkToTheDesert/obj/project.assets.json
+/WalkToTheDesert/obj/Debug/net6.0/WalkToTheDesert.GeneratedMSBuildEditorConfig.editorconfig
+/WalkToTheDesert/obj/WalkToTheDesert.csproj.nuget.dgspec.json
+/WalkToTheDesert/obj/WalkToTheDesert.csproj.nuget.g.props
