--- a/Agrivoltaics/manifest.json
+++ b/Agrivoltaics/manifest.json
@@ -1,14 +1,16 @@
 {
-  "Name": "Agrivoltaics",
-  "Author": "juminos",
-  "Version": "1.0.0",
-  "Description": "Practice agrivoltaic farming.",
-  "UniqueID": "juminos.Agrivoltaics",
-  "UpdateKeys": [],
-  "Dependencies": [
-    {
-        "UniqueID": "juminos.Agrivoltaics.CP",
-        "IsRequired": true
-    }
-  ]
+    "Name": "Agrivoltaics",
+    "Author": "juminos",
+    "Version": "1.0.0",
+    "Description": "Practice agrivoltaic farming.",
+    "UniqueID": "juminos.Agrivoltaics",
+    "EntryDll": "Agrivoltaics.dll",
+    "MinimumApiVersion": "4.0.0",
+    "UpdateKeys": [],
+    "Dependencies": [
+        {
+            "UniqueID": "juminos.Agrivoltaics.CP",
+            "IsRequired": true
+        }
+    ]
 }
