--- a/MonsterHutch/MonsterHutch.csproj
+++ b/MonsterHutch/MonsterHutch.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.3.3" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
+    <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
