--- a/Agrivoltaics/Agrivoltaics.csproj
+++ b/Agrivoltaics/Agrivoltaics.csproj
@@ -7,17 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="[CP] Agrivoltaics\i18n\default.json" />
+    <Compile Remove="[CP] Agrivoltaics\**" />
+    <EmbeddedResource Remove="[CP] Agrivoltaics\**" />
+    <None Remove="[CP] Agrivoltaics\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.3.3" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
     <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="[CP] Agrivoltaics\assets\" />
   </ItemGroup>
 
 </Project>
