--- a/MonsterHutchFramework/MonsterHutchFramework/manifest.json
+++ b/MonsterHutchFramework/MonsterHutchFramework/manifest.json
@@ -1,10 +1,11 @@
 {
-  "exclude": [
-    "**/bin",
-    "**/bower_components",
-    "**/jspm_packages",
-    "**/node_modules",
-    "**/obj",
-    "**/platforms"
-  ]
+    "Name": "Monster Hutch Framework",
+    "Author": "juminos",
+    "Version": "1.0.0",
+    "Description": "A framework for adding more types of monsters to raise in the slime hutch",
+    "UniqueID": "juminos.MonsterHutchFramework",
+    "EntryDll": "MonsterHutchFramework.dll",
+    "MinimumApiVersion": "4.0.0",
+    "UpdateKeys": [  ],
+    "Dependencies": []
 }
