--- a/MonstersTheFramework/manifest.json
+++ b/MonstersTheFramework/manifest.json
@@ -1,11 +1,11 @@
 {
-    "Name": "Monsters The Framework",
-    "Author": "spacechase0",
-    "Version": "1.0.0-unofficial-1.6",
-    "Description": "Lets you make custom monsters with custom behavior.",
-    "UniqueID": "spacechase0.MonstersTheFramework",
+    "Name": "Monsters The Framework for 1.6",
+    "Author": "juminos",
+    "Version": "1.0.0",
+    "Description": "1.6 update to Monsters The Framework which lets you make custom monsters with custom behavior.",
+    "UniqueID": "juminos.MonstersTheFramework1.6",
     "EntryDll": "MonstersTheFramework.dll",
-    "MinimumApiVersion": "4.0.0",
+    "MinimumApiVersion": "4.1.0",
     "UpdateKeys": [],
     "Dependencies": []
 }
