--- a/MonsterHutchFramework/manifest.json
+++ b/MonsterHutchFramework/manifest.json
@@ -1,8 +1,8 @@
 {
     "Name": "Monster Hutch Framework",
     "Author": "juminos",
-    "Version": "1.0.1",
-    "Description": "A framework for adding more types of monsters to raise in the slime hutch",
+    "Version": "1.1.0",
+    "Description": "A framework for adding more types of monsters to raise in the slime hutch and custom charmer rings",
     "UniqueID": "juminos.MonsterHutchFramework",
     "EntryDll": "MonsterHutchFramework.dll",
     "MinimumApiVersion": "4.0.0",
